--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "web3": "^1.0.0-beta.55"
+    "web3": "^1.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
